--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=${DATA_BASE_URL:jdbc:postgresql://localhost:5432/db_name}
-spring.datasource.username=${DATA_BASE_USERNAME:login}
-spring.datasource.password=${DATA_BASE_PASSWORD:password}
+spring.datasource.url=jdbc:postgresql://localhost:5432/epam_trello
+spring.datasource.username=postgres
+spring.datasource.password=1303
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-
-server.port=${SERVER_PORT:port}
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/swagger-documentation
+server.port=8080
